# xfburn

./: .gitignore  AUTHORS  CONTRIBUTORS  ChangeLog  MAINTAINING  Makefile.am  NEWS  README  README.md  TODO  Xfburn.ui  autogen.sh  class diagram.zuml  committers.xml  configure.ac  configure.ac.in  configure.in.in  meson.build  meson_options.txt  module.xml  org.xfce.xfburn.appdata.xml.in  update-changelog.py  update-changelog.sh  xfburn-popup-menus.ui  xfburn-toolbars.ui  xfburn.appdata.xml.in  xfburn.desktop.in  xfburn.ui
desktop-integration/: Makefile.am  meson.build  thunar-sendto-xfburn.desktop.in
docs/: Makefile.am  meson.build  xfburn.xml
icons/: Makefile.am  bitmap.sh  meson.build
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
pixmaps/: Makefile  Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  (+29 more)
xfburn/: Makefile.am  NEWS  main.c  mainwin.c  mainwin.h  meson.build  xfburn-adding-progress.c  xfburn-adding-progress.h  xfburn-audio-composition.c  xfburn-audio-composition.h  xfburn-audio-disc-usage.c  xfburn-audio-disc-usage.h  xfburn-audio-track-gst.c  xfburn-audio-track-gst.h  xfburn-audio-track.c  xfburn-audio-track.h  xfburn-blank-cd-dialog.c  xfburn-blank-cd-dialog.h  xfburn-blank-cd-progress-dialog.c  xfburn-blank-cd-progress-dialog.h  xfburn-blank-dialog.c  xfburn-blank-dialog.h  xfburn-burn-audio-cd-composition-dialog.c  xfburn-burn-audio-cd-composition-dialog.h  xfburn-burn-composition-dialog.c  xfburn-burn-composition-dialog.h  xfburn-burn-composition-progress-dialog.c  xfburn-burn-composition-progress-dialog.h  xfburn-burn-data-cd-composition-dialog.c  xfburn-burn-data-cd-composition-dialog.h  xfburn-burn-data-composition-base-dialog.c  xfburn-burn-data-composition-base-dialog.h  xfburn-burn-data-composition-dialog.c  xfburn-burn-data-composition-dialog.h  xfburn-burn-data-composition-progress-dialog.c  xfburn-burn-data-composition-progress-dialog.h  xfburn-burn-data-dvd-composition-dialog.c  xfburn-burn-data-dvd-composition-dialog.h  xfburn-burn-image-dialog.c  xfburn-burn-image-dialog.h  (+81 more)
