pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA =  	                                                \
	baker-audio-copy.png						\
	baker-blank-cdrw.png						\
	baker-blank-dvdrw.png						\
	baker-burn-cd.png						\
	baker-cd.png							\
	baker-data-copy.png						\
	baker-import-session.png					
		
EXTRA_DIST = 								\
	$(pixmaps_DATA)
