xfburn_sources = [
  'xfburn-adding-progress.c',
  'xfburn-adding-progress.h',
  'xfburn-audio-composition.c',
  'xfburn-audio-composition.h',
  'xfburn-audio-disc-usage.c',
  'xfburn-audio-disc-usage.h',
  'xfburn-audio-track-gst.c',
  'xfburn-audio-track-gst.h',
  'xfburn-audio-track.c',
  'xfburn-audio-track.h',
  'xfburn-blank-dialog.c',
  'xfburn-blank-dialog.h',
  'xfburn-burn-audio-cd-composition-dialog.c',
  'xfburn-burn-audio-cd-composition-dialog.h',
  'xfburn-burn-data-cd-composition-dialog.c',
  'xfburn-burn-data-cd-composition-dialog.h',
  'xfburn-burn-data-composition-base-dialog.c',
  'xfburn-burn-data-composition-base-dialog.h',
  'xfburn-burn-data-dvd-composition-dialog.c',
  'xfburn-burn-data-dvd-composition-dialog.h',
  'xfburn-burn-image-dialog.c',
  'xfburn-burn-image-dialog.h',
  'xfburn-composition.c',
  'xfburn-composition.h',
  'xfburn-compositions-notebook.c',
  'xfburn-compositions-notebook.h',
  'xfburn-create-iso-progress-dialog.h',
  'xfburn-data-composition.c',
  'xfburn-data-composition.h',
  'xfburn-data-disc-usage.c',
  'xfburn-data-disc-usage.h',
  'xfburn-device-box.c',
  'xfburn-device-box.h',
  'xfburn-device-list.c',
  'xfburn-device-list.h',
  'xfburn-device.c',
  'xfburn-device.h',
  'xfburn-directory-browser.c',
  'xfburn-directory-browser.h',
  'xfburn-disc-usage.c',
  'xfburn-disc-usage.h',
  'xfburn-error.c',
  'xfburn-error.h',
  'xfburn-file-browser.c',
  'xfburn-file-browser.h',
  'xfburn-fs-browser.c',
  'xfburn-fs-browser.h',
  'xfburn-global.h',
  'xfburn-main-window.c',
  'xfburn-main-window.h',
  'xfburn-main.c',
  'xfburn-main.h',
  'xfburn-notebook-tab.c',
  'xfburn-notebook-tab.h',
  'xfburn-perform-burn.c',
  'xfburn-perform-burn.h',
  'xfburn-preferences-dialog.c',
  'xfburn-preferences-dialog.h',
  'xfburn-progress-dialog.c',
  'xfburn-progress-dialog.h',
  'xfburn-settings.c',
  'xfburn-settings.h',
  'xfburn-transcoder-basic.c',
  'xfburn-transcoder-basic.h',
  'xfburn-transcoder-gst.c',
  'xfburn-transcoder-gst.h',
  'xfburn-transcoder.c',
  'xfburn-transcoder.h',
  'xfburn-udev-manager.c',
  'xfburn-udev-manager.h',
  'xfburn-utils.c',
  'xfburn-utils.h',
  'xfburn-welcome-tab.c',
  'xfburn-welcome-tab.h',
]

xfburn_sources += gnome.genmarshal(
  'xfburn-cclosure-marshal',
  sources: 'xfburn-cclosure-marshal.list',
  prefix: 'xfburn_cclosure_marshal',
  internal: true,
  install_header: false,
)

xfburn = executable(
  'xfburn',
  xfburn_sources,
  sources: xfce_revision_h,
  dependencies: [
    exo,
    gio,
    giounix,
    glib,
    gst,
    gstpbutils,
    gthread,
    gtk,
    gudev,
    libburn,
    libisofs,
    libm,
    libxfce4ui,
    libxfce4util,
  ],
  install: true,
  install_dir: get_option('prefix') / get_option('bindir'),
)
