iconsdir = $(datadir)/icons/hicolor/24x24/stock/navigation
icons_DATA =  	                                    			\
	stock_xfburn-audio-copy.png					\
	stock_xfburn-blank-cdrw.png					\
	stock_xfburn-blank-dvdrw.png					\
	stock_xfburn-burn-cd.png					\
	stock_xfburn-cd.png						\
	stock_xfburn-data-copy.png					\
	stock_xfburn-import-session.png					
		
EXTRA_DIST = 								\
	$(icons_DATA)
