iconsdir = $(datadir)/icons/hicolor/32x32/stock/media
icons_DATA =								\
	stock_xfburn-blank-cdrw.png					\
	stock_xfburn-audio-cd.png					\
	stock_xfburn-burn-cd.png					\
	stock_xfburn-data-copy.png					\
	stock_xfburn-new-data-composition.png				\
	stock_xfburn-import-session.png					\
	stock_xfburn.png

EXTRA_DIST =								\
	$(icons_DATA)

