iconsdir = $(datadir)/icons/hicolor/scalable/stock/media
icons_DATA =								\
	stock_xfburn-blank-cdrw.svg					\
	stock_xfburn-audio-cd.svg					\
	stock_xfburn-burn-cd.svg					\
	stock_xfburn-data-copy.svg					\
	stock_xfburn-new-data-composition.svg				\
	stock_xfburn-import-session.svg					\
	stock_xfburn.svg

EXTRA_DIST =								\
	$(icons_DATA)

